<resources>
    <string name="app_name">R2D2</string>
    <string name="intro">Log in</string>
    <string name="user">UserID</string>
    <string name="pass">Contraseña</string>
    <string name="enter">Enter</string>
    <string name="regist">Registrarse</string>
    <string name="notexist">No existe este usuario</string>
    <string name="noemptyID">Debe introducir un usuario </string>
    <string name="noemptypass">Debe introducir una contraseña</string>
    <string name="existingUser">Este ID de usuario ya existe, porfavor elija otro</string>
    <string name="regsuccess">Se ha registrado con exito</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="dial_list">Agenda</string>
    <string name="navigation">Navegador</string>
    <string name="toast">Toast</string>
    <string name="State">Barra de estado</string>
    <string name="retry">Reintentar</string>
    <string name="nocall">No se puede llamar a un numero con expresiones</string>
    <string name="error">Error!</string>
    <string name="toolong">Demasiados caracteres</string>
    <string name="profile">Perfil</string>
    <string name="calculator">Calculadora</string>
    <string name="memory">Memory</string>
    <string name="music">Reproductor</string>
    <string name="score">Puntuación:</string>
    <string name="Ranking">Ranking</string>
    <string name="worldchamp">World Record</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meetdev">Meet the Dev</string>
    <string name="congrats">Enhorabuena</string>
    <string name="newrecord">NUEVO RECORD PERSONAL!!</string>
    <string name="replay">Nueva partida</string>
    <string name="avatar">Avatar</string>
    <string name="where">Donde estas?</string>
    <string name="whereare">Su situacion es desconocida</string>
    <string name="name">Nombre y apellidos</string>
    <string name="hiscore">Mejor puntuacion:</string>
    <string name="plsname">Introduzca su nombre y apellidos</string>
</resources>
